# FPS-Game

./: CMakeLists.txt  README.md  UserSettings.json  clangd.yaml
.cache/clangd/index/: cJSON.c.F3BD59105706DC1B.idx  cJSON.h.9FF96AAD7466909D.idx  main.c.4F96825792A46BCD.idx  main.c.F50354C5180A91FA.idx  main.c.F5836A388862F34E.idx  settings.c.CC308DE8462CC885.idx  target.c.5DC9D6E631459553.idx
src/: main.c  player.c  player.h  raygui_impl.c  settings.c  settings.h  target.c  target.h
